Makefile pro billboard - lib64

--- a/billboard/Makefile
+++ b/billboard/Makefile
@@ -12,7 +12,7 @@ ifeq ($(OS), Windows_NT)
 	LIBS=-lopengl32 -lglu32 -lSDL
 else
 	CFLAGS=$(CFLAGS_COMMON) `sdl-config --cflags` -I. -IGL
-	LIBS=`sdl-config --libs` -lGL -lGLU -lXmu -lX11 -lXi -L/usr/X11R6/lib
+	LIBS=`sdl-config --libs`  -L/usr/lib -lGL -lGLU -lXmu -lX11 -lXi -L/usr/X11R6/lib
 endif
 
 CXXFLAGS=$(CFLAGS)
